Add view to update OAuth app

--- a/src/pretix/eventyay_common/templates/eventyay_common/account/general-settings.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/account/general-settings.html
@@ -75,7 +75,7 @@
         <div class='form-group'>
             <label class='col-md-3 control-label' for="">{{ _('Authorized applications') }}</label>
             <div class='col-md-9 static-form-row'>
-                <a href="{% url 'eventyay_common:account.oauth-list' %}">
+                <a href="{% url 'eventyay_common:account.oauth.authorized-apps' %}">
                     <span class='fa fa-plug'></span>
                     {{ _('Show applications') }}
                 </a>
