--- a/src/pretix/eventyay_common/templates/eventyay_common/account/2fa-enable.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/account/2fa-enable.html
@@ -1,4 +1,4 @@
-{% extends 'pretixcontrol/base.html' %}
+{% extends 'eventyay_common/base.html' %}
 {% load i18n %}
 {% load bootstrap3 %}
 {% block title %}{{ _('Enable two-factor authentication') }}{% endblock %}
