--- a/src/pretix/control/templates/pretixcontrol/user/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/user/settings.html
@@ -70,7 +70,7 @@
         <div class="form-group">
             <label class="col-md-3 control-label" for="">{% trans "Account history" %}</label>
             <div class="col-md-9 static-form-row">
-                <a href="{% url "control:user.settings.history" %}">
+                <a href="{% url "eventyay_common:account.history" %}">
                     <span class="fa fa-history"></span>
                     {% trans "Show account history" %}
                 </a>
