--- a/src/pretix/eventyay_common/templates/eventyay_common/account/2fa-disable.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/account/2fa-disable.html
@@ -1,7 +1,20 @@
-{% extends "eventyay_common/base.html" %}
+{% extends 'eventyay_common/base.html' %}
 {% load i18n %}
 {% load bootstrap3 %}
-{% block title %}{{ _('Disable two-factor authentication') }}{% endblock %}
+{% block title %}{{ _('Disable two-factor authentication') }}{% endblock title %}
+
+{% block nav_top_header %}
+    <a href="{% url 'eventyay_common:account' %}" class='dropdown-toggle'>
+        <span class='fa-stack fa-lg'>
+            <i class='fa fa-circle fa-stack-2x'></i>
+            <i class='fa fa-user fa-stack-1x fa-inverse'></i>
+        </span>
+        <div class='context-indicator'>
+            <span class='context-name'>{{ _('Account') }}</span>
+        </div>
+    </a>
+{% endblock nav_top_header %}
+
 {% block content %}
     <h1>{{ _('Disable two-factor authentication') }}</h1>
     <form action='' method='post' class='form-horizontal'>
@@ -21,4 +34,4 @@
             </button>
         </div>
     </form>
-{% endblock %}
+{% endblock content %}
