enhancement: Use event creation method in common module only

--- a/src/pretix/control/templates/pretixcontrol/dashboard.html
+++ b/src/pretix/control/templates/pretixcontrol/dashboard.html
@@ -16,7 +16,7 @@
     <div class="dashboard">
         {% if can_create_event %}
             <div class="widget-small widget-container">
-                <a href="{% url "control:events.add" %}" class="widget">
+                <a href="{% url "eventyay_common:events.add" %}" class="widget">
                     <div class="newevent"><span class="fa fa-plus-circle"></span>{% trans "Create a new event" %}</div>
                 </a>
             </div>
