Fix URL name for "app revoke" view

--- a/src/pretix/eventyay_common/templates/eventyay_common/account/authorized-apps.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/account/authorized-apps.html
@@ -58,7 +58,7 @@
                             </ul>
                         </td>
                         <td class='text-right flip'>
-                            <a href="{% url 'eventyay_common:account.oauth.revoke' pk=token.pk %}"
+                            <a href="{% url 'eventyay_common:account.oauth.app.revoke' pk=token.pk %}"
                                class='btn btn-danger btn-sm'>{{ _('Revoke access') }}</a>
                         </td>
                     </tr>
