--- a/src/pretix/eventyay_common/templates/eventyay_common/events/index.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/events/index.html
@@ -32,6 +32,9 @@
                         <div class="col-md-3 col-sm-6 col-xs-12">
                             {% bootstrap_field filter_form.organizer layout='inline' %}
                         </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            {% bootstrap_field filter_form.status layout='inline' %}
+                        </div>
                     </div>
                     <div class="text-right">
                         <button class="btn btn-primary" type="submit">
