--- a/src/pretix/eventyay_common/templates/eventyay_common/organizers/edit.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/organizers/edit.html
@@ -13,7 +13,7 @@
             {% bootstrap_field form.slug layout="horizontal" %}
         </fieldset>
         <fieldset>
-            <h4>{% trans "Setting for Tickets system" %}
+            <h4>{% trans "Settings for Tickets system" %}
                 <a href='{% url "control:organizer.edit" organizer=organizer.slug  %}'
                         class="btn btn-sm btn-default" title='{% trans "Edit" %}'
                         data-toggle="tooltip">
@@ -22,7 +22,7 @@
             </h4>
         </fieldset>
         <fieldset>
-            <h4>{% trans "Setting for Talk system" %}
+            <h4>{% trans "Settings for Talk system" %}
                 <a href='{{ talk_edit_url }}'
                         class="btn btn-sm btn-default" title='{% trans "Edit" %}'
                         data-toggle="tooltip">
