fix: Update top bar color and logo to match eventyay-tickets, remove bottom highlight line (#346)

--- a/src/pretalx/static/common/css/_variables.css
+++ b/src/pretalx/static/common/css/_variables.css
@@ -59,6 +59,7 @@
   --color-card-border: rgb(0 0 0 / 0.125);
   --color-card-header: rgb(0 0 0 / 0.03);
   --color-border: #ced4da;
+  --color-border-navbar: #1a69a4;
 
   --size-border-radius: 0.25rem;
   --size-spacer: 1rem;
