--- a/src/pretix/eventyay_common/templates/eventyay_common/organizers/edit.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/organizers/edit.html
@@ -19,7 +19,7 @@
                         data-toggle="tooltip">Ticket Teams
                 </a>
                 <a href='{% url "control:organizer.edit" organizer=organizer.slug  %}'
-                        class="btn btn-sm btn-default" title='{{ _('Settings') }}'
+                        class="btn btn-sm btn-default" title="{{ _('Settings') }}"
                         data-toggle="tooltip">
                     <span class="fa fa-cog"></span>
                 </a>
@@ -32,7 +32,7 @@
                             data-toggle="tooltip">Talk Teams
                 </a>
                 <a href='{{ talk_edit_url }}'
-                        class="btn btn-sm btn-default" title='{{ _('Settings') }}'
+                        class="btn btn-sm btn-default" title="{{ _('Settings') }}"
                         data-toggle="tooltip">
                     <span class="fa fa-cog"></span>
                 </a>
