--- a/src/pretalx/static/common/css/_forms.css
+++ b/src/pretalx/static/common/css/_forms.css
@@ -573,10 +573,9 @@ input.password_strength {
   justify-content: space-between;
   flex-grow: 1;
   flex-wrap: wrap;
-  background-color: var(--color-grey-lightest);
+  background-color: var(--color-grey-pale);
   padding: 16px;
   margin-bottom: 16px;
-  border-radius: var(--size-border-radius);
 
   button {
     align-self: flex-end;
