--- a/src/pretalx/static/orga/css/_layout.css
+++ b/src/pretalx/static/orga/css/_layout.css
@@ -154,7 +154,7 @@ details.card {
   }
 }
 aside.sidebar {
-  background-color: var(--color-grey-lightest);
+  background-color: var(--color-grey-ultralight);
   box-shadow: var(--shadow-lighter);
   width: 45px;
   height: 100vh;
@@ -191,7 +191,7 @@ aside.sidebar {
   }
 
   a {
-    color: var(--color-text-lighter);
+    color: var(--color-primary);
     font-weight: bold;
     &:hover {
       text-decoration: none;
@@ -202,7 +202,7 @@ aside.sidebar {
   #nav-search-wrapper {
     .arrow {
       flex-grow: 0;
-      color: var(--color-text-lighter);
+      color: var(--color-primary);
       width: 40px;
       border: none;
       display: flex;
@@ -236,7 +236,7 @@ aside.sidebar {
   .nav-link,
   .nav-fold {
     display: block;
-    border-top: 1px solid var(--color-grey-light);
+    border-top: 1px solid #e7e7e7;
     div > a {
       display: none;
     }
@@ -246,7 +246,7 @@ aside.sidebar {
     padding: 10px 15px;
 
     &:last-child {
-      border-bottom: 1px solid var(--color-grey-light);
+      border-bottom: 1px solid #e7e7e7;
     }
   }
 
@@ -271,14 +271,18 @@ aside.sidebar {
   }
 
   .nav-link.active,
+  .nav-link.nav-link-second-level.active {
+    background-color: var(--color-grey-pale);
+  }
   .nav-link.active:hover,
-  .nav-link.nav-link-second-level.active,
   .nav-link.nav-link-second-level.active:hover {
-    background-color: var(--color-primary-lighter);
+    background-color: var(--color-grey-pale);
+    color: var(--color-primary-text-dark);
   }
   .nav-link:hover,
   .nav-link.nav-link-second-level:hover {
-    background-color: var(--color-grey-lighter);
+    color: var(--color-primary-text-dark);
+    background-color: var(--color-grey-pale);
   }
   #nav-search {
     display: flex;
