--- a/src/pretix/eventyay_common/templates/eventyay_common/event/settings.html
+++ b/src/pretix/eventyay_common/templates/eventyay_common/event/settings.html
@@ -126,6 +126,10 @@
                 {% bootstrap_field sform.timezone layout="control" %}
             </fieldset>
             <fieldset>
+                <legend>{{ _('Texts') }}</legend>
+                {% bootstrap_field sform.frontpage_text layout="control" %}
+            </fieldset>
+            <fieldset>
                 <legend>{{ _('Design') }}</legend>
                 {% bootstrap_field sform.logo_image layout="control" %}
                 {% bootstrap_field sform.logo_image_large layout="control" %}
