Implemented burger menu to minimize left sidebar

--- a/src/pretix/control/templates/pretixcontrol/base.html
+++ b/src/pretix/control/templates/pretixcontrol/base.html
@@ -63,6 +63,7 @@
             <script type="text/javascript" src="{% static "pretixcontrol/js/ui/popover.js" %}"></script>
             <script type="text/javascript" src="{% static "utils/js/utils.js" %}"></script>
             <script type="text/javascript" src="{% static "task_management/js/task_management.js" %}"></script>
+            <script type="text/javascript" src="{% static "eventyay-common/js/sidebar.js" %}"></script>
 		{% endcompress %}
         {{ html_head|safe }}
 
