--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -18,6 +18,7 @@
 @import "../../colorpicker/bootstrap-colorpicker.scss";
 @import "../../eventyay-common/scss/_voucher.scss";
 @import "../../eventyay-common/scss/custom.scss";
+@import "../../eventyay-common/scss/sidebar.scss";
 
 /* See https://github.com/pretix/pretix/pull/761 */
 .bootstrap-datetimepicker-widget table td span {
